K1J-1410: Refactor RoundTripTest to use JUnit 5 and Mockito for parameterized tests